--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <header id="navbar"></header>
   <section class="banner">
     <div>
-      <div> <img src="../assets/images/mr_bansal.jpg" alt="mr bansal"></div>
+      <div> <img src="./assets/images/mr_bansal.jpg" alt="mr bansal"></div>
       <div>
         <div>
           <div class="one">
@@ -60,7 +60,10 @@
   </section>
 
   <section class="about">
-    <h2>More About Me</h2>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <h2 class="head-h2">More About Me</h2>
     <p>
       Chasing his dreams since 1996, Vikas spent the first 22 years struggling
       to just get a glimpse of his hero. Little did he know, there would come
@@ -78,6 +81,7 @@
       also turn out to be his best friend.
     </p>
     <br>
+
     <h3>
       AS OF 2022, VIKAS BANSAL BOASTS THE FOLLOWING CREDENTIALS TO HIS NAME:
     </h3>
@@ -138,6 +142,19 @@
       </p>
       <label for="following-content" class="read-more-trigger"></label>
     </blockquote>
+
+  </section>
+  <section class="images">
+    <div class="imgz">
+      <img src="assets/images/vb1.jpg" alt="Slide 1">
+      <img src="assets/images/vb6.png" alt="banner">
+      <img src="assets/images/vb5.jpg" alt="Slide 5">
+    </div>
+    <div class="imgz">
+      <img src="assets/images/vb2.jpg" alt="Slide 2">
+      <img src="assets/images/vb3.jpg" alt="Slide 3">
+      <img src="assets/images/vb4.jpg" alt="Slide 4">
+    </div>
 
   </section>
 
