--- a/press.html
+++ b/press.html
@@ -34,6 +34,7 @@
   <section class="banner">
     <img src="assets/images/press_banner.jpg" alt="contact_banner" />
   </section>
+
   <div class="three">
     <h1>Articles</h1>
   </div>
@@ -65,9 +66,14 @@
     </main>
   </section>
 
-  <div class="three">
+  <div class="v three">
     <h1>Videos</h1>
   </div>
+  <section class="videos">
+    <video controls autoplay muted loop>
+      <source src="assets/sony.mp4" type="video/mp4">
+    </video>
+  </section>
   <section class="videos">
 
     <iframe src="https://www.youtube-nocookie.com/embed/v4CeRFcVqto?controls=0&amp;start=2048&end=2335"
